# SPDX-FileCopyrightText: © 2020 Matt Williams <matt@milliams.com>
# SPDX-License-Identifier: MIT

[package]
name = "whenisitat"
version = "0.1.0"
authors = ["Matt Williams <matt@milliams.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/milliams/whenisit.at"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.76"
yew = "0.18"
yew-router = "0.15"
yew-components = "0.3"
yewtil = "0.4"
web-sys = "0.3"
js-sys = "0.3"
chrono = {version = "0.4", features = ["wasmbind"]}
chrono-tz = {version = "0.5", default-features = false}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true

[profile.dev]
lto = true
